# dragcalculator

./: .gitignore  README.ko.md  README.md  build.ps1  pyproject.toml  requirements.txt  run.py
src/dragcalculator/: app.py  calculator.py  ocr.py  screen.py
tests/: test_calculator.py
tools/: generate_screenshots.py
